2007-04-17  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/asfparse.py:
	* flumotion/component/producers/wms.py:
	  Downgrade many debug statements seen continually in normal operation
	  to log level, to avoid creating ridiculously oversized logfiles.

2007-04-17  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/asfparse.py:
	  Add some code to dump the first few bytes of unknown packets so we
	  can inspect them later.

2007-04-17  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/asfparse.py:
	  Fix logic for skipping unknown packet types ('F' occurred in
	  testing) so we don't try and parse it as an ASF data packet, and
	  then fail.
	  Add some comments on packet types.

2007-04-16  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/wms.py:
	  Working authentication. Comma separated parameters! Now remove some
	  nasty hacks, because they were nasty and were unneccesary.

2007-04-13  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/asfparse.py:
	  Infrastructure in asf parser and ASFSrc to support the pull-mode
	  variant of the format. Unused.

2007-04-13  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/wms.py:
	  Fix up previous changes to authenticators to work again.

2007-04-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/wma/wma.py
	  (WMAEncoder.get_pipeline_string, WMAEncoder.configure_pipeline):
	* flumotion/component/encoders/wma/wma.xml:
	  Since we only want dropping to fix sync for A/V streams, make
	  this configurable.

2007-04-12  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/wms.py:
	* flumotion/component/producers/wms.xml:
	  Add 'secure' property. If set to false (defaults to true), then
	  don't check opaque/nonce for validity; this enables replay attacks
	  and makes the authentication approximately as secure as Basic auth.
